# CodexMonitor

./: .gitignore  .ios.local.env.example  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  GEMINI.md  MERGE_FIXES.md  PLAN.md  README.md  REMOTE_BACKEND_POC.md  SECURITY.md  SETTINGS_I18N_FIX_PLAN.md  SPEC.md  SUPPORT.md  VERIFICATION_REPORT.md  codex-parity.config.json  flake.nix  i18next-parser.config.js  i18next-parser.config.mjs  latest.json  package-lock.json  package.json  playwright.config.ts  test-results.txt  vite.config.ts  vitest.e2e.config.ts
.cargo/: config.toml
.claude/: settings.json  settings.local.json
.config/: wt.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
docs/: INSTALLATION.md  RELEASE.md  RELEASE_CHECKLIST.md  app-server-events.md  claude-cli-integration-analysis.md  claude-cli-integration-plan.md  codebase-map.md  codexmonitor-blueprint-plan.md  index.md  macos-launchd-daemon.md  mobile-ios-tailscale-blueprint.md  repo-documentation-gap-remediation.md
e2e/: README.md  smoke.spec.ts
memory/: i18n-plan.md
scripts/: acp-smoke.mjs  acp_smoke.py  build-tauri-sidecars.mjs  build-tauri-sidecars.sh  (+10 more)
src-tauri/: Cargo.toml  README.md  build.rs  tauri.bundle.conf.json  tauri.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/symphony/: manifest.json
src-tauri/scripts/: cleanup-daemon-legacy-names.sh  prepare-daemon-sidecar.sh
src-tauri/src/: codex.rs  codex_args.rs  codex_home.rs  daemon_binary.rs  dictation.rs  dictation_stub.rs  error.rs  event_sink.rs  git.rs  git_mobile.rs  git_utils_mobile.rs  lib.rs  local_usage.rs  menu.rs  metrics.rs  notifications.rs  prompts.rs  retry.rs  rules.rs  settings.rs  state.rs  storage.rs  symphony.rs  symphony_binary.rs  terminal.rs  types.rs  validation.rs  window.rs  workspaces.rs
src-tauri/src/backend/: acp_server.rs  app_server.rs  claude_provider.rs  events.rs
src-tauri/src/claude/: args.rs  config.rs  home.rs  mod.rs
src-tauri/src/claude_bridge/: event_mapper.rs  item_tracker.rs  mod.rs  process.rs  types.rs
src-tauri/src/codex/: config.rs  mod.rs
src-tauri/src/cursor/: mod.rs
src-tauri/src/dictation/: real.rs
src-tauri/src/git/: mod.rs
src-tauri/src/integrations/: mod.rs  nats.rs  telegram.rs
src-tauri/src/orbit/: mod.rs
src-tauri/src/remote_backend/: mod.rs  tcp_transport.rs  transport.rs  ws_transport.rs
src-tauri/src/shared/: claude_core.rs  codex_aux_core.rs  codex_core.rs  codex_update_core.rs  git_ui_core.rs  mod.rs  orbit_core.rs  process_core.rs  settings_core.rs  symphony_core.rs  thread_codex_metadata.rs  thread_usage_core.rs  workspace_rpc.rs  workspaces_core.rs
src-tauri/src/shared/git_ui_core/: commands.rs  diff.rs  github.rs  log.rs  tests.rs
src-tauri/src/shared/workspaces_core/: connect.rs  crud_persistence.rs  io.rs  runtime_codex_args.rs  worktree.rs
src-tauri/src/tailscale/: core.rs  daemon_commands.rs  mod.rs  rpc_client.rs
src-tauri/src/workspaces/: commands.rs  tests.rs
(+532 files in other folders)
